...
                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name,Address and distance" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kMy-7w-tGA" userLabel="Advent
                                                    <rect key="frame" x="0.0" y="100" width="414" height="100"/>
                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="All Adventures" id="evb-Wd-Ycg"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Igr-bD-S2l" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
            <objects>
                <splitViewController id="c5s-XZ-0Y1" userLabel="Adventure Split View" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Adventure" image="adventure" id="x44-bY-dWd" userLabel="Adventure"/>
                    <connections>
                        <segue destination="jrv-C7-tOV" kind="relationship" relationship="detailViewController" id="mlc-3M-hH1"/>
...
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="Category" id="3Cj-tS-NPw" userLabel="Category"/>
                    <connections>
                        <outlet property="collect_View" destination="1r7-kz-dJy" id="PFt-U9-VE4"/>
...
                            <autoresizingMask key="autoresizingMask"/>
                            <subviews>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="camping" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cYh-m6-hvA" userLabel="LabelCategory">
                                    <rect key="frame" x="10" y="18" width="77" height="14"/>
                                    <constraints>
...
                    </collectionView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="My Favorites" id="edX-zz-Tkq">
                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="0Yw-V2-YIi">
                            <connections>
...
                                            <constraint firstAttribute="width" constant="100" id="xYS-V1-iLf"/>
                                        </constraints>
                                        <state key="normal" title="Del Adventure">
                                            <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                <rect key="frame" x="0.0" y="647" width="414" height="40"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Adding your comments" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cak-za-9TG" userLabel="inputTextField">
                                        <rect key="frame" x="0.0" y="5" width="339" height="30"/>
                                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="send">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <color key="titleShadowColor" red="1" green="0.74509566859999998" blue="0.040600900029999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Hde-98-pMT" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Favorite" image="favorite" landscapeImage="favorite" id="48R-iU-j3M"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wVj-rZ-CY8">
...
                                            <constraint firstAttribute="width" constant="50" id="f1P-p4-mPJ"/>
                                        </constraints>
                                        <state key="normal" title="camara" image="Camera"/>
                                        <variation key="default">
                                            <mask key="constraints">
...
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Profile" id="JAb-5V-Toj">
                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="Zef-Bv-El4" userLabel="Edit">
                            <connections>
...
                                                </variation>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BwC-i6-HOt">
                                                <rect key="frame" x="0.0" y="52" width="67.666666666666671" height="50"/>
                                                <constraints>
...
                                                </variation>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mnQ-hq-oXy">
                                                <rect key="frame" x="0.0" y="104" width="67.666666666666671" height="50"/>
                                                <constraints>
...
                                                </variation>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ysh-rv-d6l">
                                                <rect key="frame" x="0.0" y="156" width="67.666666666666671" height="50"/>
                                                <constraints>
...
